Closed
Bug 1389227
Opened 9 years ago
Closed 9 years ago
Crash in InvalidArrayIndex_CRASH | mozilla::gfx::VRSystemManagerOpenVR::StopVibrateHaptic
Categories
(Core :: WebVR, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | wontfix |
| firefox56 | --- | fixed |
| firefox57 | --- | fixed |
People
(Reporter: marcia, Assigned: daoshengmu)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
kip
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is
report bp-9ec52f90-58fa-4fc5-8181-e99970170810.
=============================================================
Seen while going through nightly crash data - only a few installs all on Windows 10: http://bit.ly/2vrpGeq
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → dmu
| Assignee | ||
Comment 1•9 years ago
|
||
It looks like we access the controllers that are removed and still be called.
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8896202 [details]
Bug 1389227 - Avoid accessing invalid array index in vr controllers when stopping vibrate;
https://reviewboard.mozilla.org/r/167492/#review174700
lgtm, thanks!
Attachment #8896202 -
Flags: review?(kgilbert) → review+
Pushed by dmu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5cb6a8e0de5f
Avoid accessing invalid array index in vr controllers when stopping vibrate; r=kip
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8896202 [details]
Bug 1389227 - Avoid accessing invalid array index in vr controllers when stopping vibrate;
Approval Request Comment
[Feature/Bug causing the regression]: Accessing invalid array index of vr controllers
[User impact if declined]: Crashes will continue to happen.
[Is this code covered by automated tests?]: Nope. I have tested manually.
[Has the fix been verified in Nightly?]: Yes.
[Needs manual test from QE? If yes, steps to reproduce]: Nope. It is a very simple fix, and it will not have any danger.
[List of other uplifts needed for the feature/fix]: nope.
[Is the change risky?]: nope.
[Why is the change risky/not risky?]: Just adding a condition for avoiding accessing the invalid index.
[String changes made/needed]: nope.
Attachment #8896202 -
Flags: approval-mozilla-beta?
Comment 7•9 years ago
|
||
Comment on attachment 8896202 [details]
Bug 1389227 - Avoid accessing invalid array index in vr controllers when stopping vibrate;
Crash fix for webVR, please uplift for beta 5.
Attachment #8896202 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•9 years ago
|
||
| bugherder uplift | ||
status-firefox56:
--- → fixed
Updated•9 years ago
|
status-firefox55:
--- → wontfix
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•