Bug 1389227 - Avoid accessing invalid array index in vr controllers when stopping vibrate. r=kip, a=lizzard

MozReview-Commit-ID: NR5FLllABm